# my-careerpath

./: README.md  package-lock.json
.agent/rules/: project-context.md
.agents/rules/: project-context.md
.agents/skills/adk-agent-development/: SKILL.md
.agents/skills/adk-agent-development/examples/: Dockerfile  basic_agent.py  server.py  stateful_agent.py  toolbox_agent.py  tools.yaml  tools_agent.py
.agents/skills/repo-research/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env  .env.example  main.py  pyproject.toml
backend/my_careerpath/: agent.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CvUploader.tsx  ResultsPanel.tsx
specs/001-center-drop-zone/: spec.md
specs/001-center-drop-zone/checklists/: requirements.md
specs/002-company-matches-link/: spec.md
specs/002-company-matches-link/checklists/: requirements.md
specs/003-tutorial-recommendations/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-tutorial-recommendations/checklists/: requirements.md
specs/003-tutorial-recommendations/contracts/: api.md
